--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -13,7 +13,7 @@ on:
       - "v*"
 
 env:
-  IMAGE_NAME: ${{ github.repository }}
+  IMAGE_NAME: zyhwjl/quark-auto-save
 
 jobs:
   build-and-push:
