--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -8,12 +8,12 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - main
+      - zyhwjl
     tags:
       - "v*"
 
 env:
-  IMAGE_NAME: ${{ github.repository }}
+  IMAGE_NAME: zyhwjl/quark-auto-save
 
 jobs:
   build-and-push:
@@ -30,8 +30,6 @@ jobs:
         with:
           images: |
             ${{ env.IMAGE_NAME }}
-            ghcr.io/${{ env.IMAGE_NAME }}
-            registry.cn-shenzhen.aliyuncs.com/${{ env.IMAGE_NAME }}
           tags: |
             type=ref,event=branch
             type=ref,event=tag
@@ -46,19 +44,19 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+      # - name: Login to GitHub Container Registry
+      #   uses: docker/login-action@v3
+      #   with:
+      #     registry: ghcr.io
+      #     username: ${{ github.repository_owner }}
+      #     password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Login to aliyun
-        uses: docker/login-action@v3
-        with:
-          registry: registry.cn-shenzhen.aliyuncs.com
-          username: ${{ secrets.ALIYUN_USERNAME }}
-          password: ${{ secrets.ALIYUN_TOKEN }}
+      # - name: Login to aliyun
+      #   uses: docker/login-action@v3
+      #   with:
+      #     registry: registry.cn-shenzhen.aliyuncs.com
+      #     username: ${{ secrets.ALIYUN_USERNAME }}
+      #     password: ${{ secrets.ALIYUN_TOKEN }}
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -97,17 +95,16 @@ jobs:
       - name: Get Commit Messages
         id: get_commit_messages
         run: |
-          # Get the latest tag
-          LATEST_TAG=$(git describe --tags --abbrev=0 HEAD^)
+          LATEST_TAG=$(git describe --tags --abbrev=0 HEAD^ || echo "")
 
-          # If there is no latest tag, get only the latest commit message
           if [ -z "$LATEST_TAG" ]; then
-            COMMITS=$(git log -1 --pretty=format:'- %s (%h)')
+            echo "没有找到标签，获取所有提交信息"
+            COMMITS=$(git log --pretty=format:'- %s (%h)' --no-merges)
           else
+            echo "找到标签 $LATEST_TAG，获取从该标签到HEAD的提交信息"
             COMMITS=$(git log --pretty=format:'- %s (%h)' --no-merges "$LATEST_TAG"..HEAD)
           fi
 
-          # Output Multi-Line String
           echo "commits<<EOF" >> $GITHUB_OUTPUT
           echo "$COMMITS" >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
